--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   "dependencies": {
     "bcrypt": "~1.0.2",
     "body-parser": "~1.16.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "express-session": "^1.15.3",
     "mongoose": "~4.8.5",
     "morgan": "~1.7.0",
-    "passport": "~0.3.2"
+    "passport": "~0.3.2",
+    "serve-favicon": "^2.4.3"
   },
   "devDependencies": {
     "nodemon": "~1.11.0"
