--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "dependencies": {
     "bcrypt": "~1.0.2",
     "body-parser": "~1.16.0",
+    "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.3",
     "debug": "~2.6.0",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
