--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "express-session": "^1.15.3",
+    "http": "0.0.0",
     "mongoose": "~4.8.5",
     "morgan": "~1.7.0",
     "passport": "~0.3.2",
