--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.0",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "express-ejs-layouts": "^2.3.0",
     "express-session": "^1.15.3",
     "http": "0.0.0",
     "mongoose": "~4.8.5",
