--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "~4.8.5",
     "morgan": "~1.7.0",
     "node-hue-api": "^2.4.2",
+    "overlook": "^0.4.25",
     "passport": "~0.3.2",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.4.3"
