--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "overlook": "^0.4.25",
     "passport": "~0.3.2",
     "passport-local": "^1.0.0",
+    "request": "^2.81.0",
     "serve-favicon": "^2.4.3"
   },
   "devDependencies": {
