--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-ejs-layouts": "^2.3.0",
     "express-session": "^1.15.3",
     "http": "0.0.0",
+    "https": "^1.0.0",
     "mongoose": "~4.8.5",
     "morgan": "~1.7.0",
     "node-hue-api": "^2.4.2",
