--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "overlook": "^0.4.25",
     "passport": "~0.3.2",
     "passport-local": "^1.0.0",
+    "querystring": "^0.2.0",
     "request": "^2.81.0",
     "serve-favicon": "^2.4.3"
   },
