--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "passport-local": "^1.0.0",
     "querystring": "^0.2.0",
     "request": "^2.81.0",
-    "serve-favicon": "^2.4.3"
+    "serve-favicon": "^2.4.3",
+    "urlencode": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "~1.11.0"
