--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "express-ejs-layouts": "^2.3.0",
     "express-session": "^1.15.3",
     "http": "0.0.0",
-    "https": "^1.0.0",
     "mongoose": "~4.8.5",
     "morgan": "~1.7.0",
     "node-hue-api": "^2.4.2",
@@ -27,8 +26,7 @@
     "passport-local": "^1.0.0",
     "querystring": "^0.2.0",
     "request": "^2.81.0",
-    "serve-favicon": "^2.4.3",
-    "urlencode": "^1.1.0"
+    "serve-favicon": "^2.4.3"
   },
   "devDependencies": {
     "nodemon": "~1.11.0"
