--- a/package.json
+++ b/package.json
@@ -13,20 +13,22 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.0",
+    "dotenv": "^4.0.0",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "express-ejs-layouts": "^2.3.0",
     "express-session": "^1.15.3",
+    "git": "^0.1.5",
     "http": "0.0.0",
     "mongoose": "~4.8.5",
     "morgan": "~1.7.0",
     "node-hue-api": "^2.4.2",
-    "overlook": "^0.4.25",
     "passport": "~0.3.2",
     "passport-local": "^1.0.0",
     "querystring": "^0.2.0",
     "request": "^2.81.0",
-    "serve-favicon": "^2.4.3"
+    "serve-favicon": "^2.4.3",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "nodemon": "~1.11.0"
