--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "ajax": "0.0.4",
     "bcrypt": "~1.0.2",
     "body-parser": "~1.16.0",
     "connect-ensure-login": "^0.1.1",
@@ -20,6 +21,7 @@
     "express-session": "^1.15.3",
     "git": "^0.1.5",
     "http": "0.0.0",
+    "jquery": "^3.2.1",
     "mongoose": "~4.8.5",
     "morgan": "~1.7.0",
     "node-hue-api": "^2.4.2",
